[gd_scene load_steps=18 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://images/coins.png" type="Texture" id=2]
[ext_resource path="res://images/coeur.png" type="Texture" id=3]
[ext_resource path="res://BuyButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/canon.png" type="Texture" id=6]
[ext_resource path="res://FastCannon.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/fastcanon.png" type="Texture" id=8]
[ext_resource path="res://VeryFastCannon.tscn" type="PackedScene" id=9]
[ext_resource path="res://images/veryfastcanon.png" type="Texture" id=10]
[ext_resource path="res://NextWaveButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://NextWaveButton.gd" type="Script" id=12]
[ext_resource path="res://ShopButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://Shop.tscn" type="PackedScene" id=14]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0224304, 0.210235, 0.410156, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFontData" id=2]

hinting = 2
font_path = "res://NotoSans-Regular.ttf"

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = true
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="HUD" type="Node2D" groups=[
"game_listener",
]]

script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -5.0
margin_top = 603.0
margin_right = 810.0
margin_bottom = 654.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )
_sections_unfolded = [ "custom_styles" ]

[node name="Coins" type="Sprite" parent="." index="1"]

position = Vector2( 124.163, 630.337 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CoinsText" type="RichTextLabel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_top = 617.0
margin_right = 184.0
margin_bottom = 638.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = false
tab_size = 4
text = "0"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="WavesText" type="RichTextLabel" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 692.0
margin_top = 616.0
margin_right = 808.0
margin_bottom = 638.0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = false
tab_size = 4
text = "Next: Wave 2"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Hearts" type="Node2D" parent="." index="4"]

editor/display_folded = true

[node name="Heart1" type="Sprite" parent="Hearts" index="0"]

position = Vector2( 26.5316, 630.337 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Heart2" type="Sprite" parent="Hearts" index="1"]

position = Vector2( 51.5316, 630.337 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Heart3" type="Sprite" parent="Hearts" index="2"]

position = Vector2( 76.5316, 630.337 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Cannons" type="Node2D" parent="." index="5"]

editor/display_folded = true

[node name="BuyButton" parent="Cannons" index="0" instance=ExtResource( 4 )]

margin_left = 200.0
margin_right = 240.0
cost = 0

[node name="BuyButton2" parent="Cannons" index="1" instance=ExtResource( 4 )]

margin_left = 250.0
margin_right = 290.0
scene = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="BuyButton3" parent="Cannons" index="2" instance=ExtResource( 4 )]

margin_left = 300.0
margin_right = 340.0
scene = ExtResource( 7 )
texture = ExtResource( 8 )
cost = 300

[node name="BuyButton4" parent="Cannons" index="3" instance=ExtResource( 4 )]

margin_left = 350.0
margin_right = 390.0
scene = ExtResource( 9 )
texture = ExtResource( 10 )
cost = 500

[node name="NextWaveButton" parent="." index="6" instance=ExtResource( 11 )]

script = ExtResource( 12 )
_sections_unfolded = [ "Rect" ]

[node name="ShopButton" parent="." index="7" instance=ExtResource( 13 )]

[node name="Shop" parent="." index="8" instance=ExtResource( 14 )]


